--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,14 @@
 </body>
 </html>
 <script>
-  (function setRootFontSize(){
+    setRootFontSize();
+  window.onresize = ()=>{
+    if(window.innerWidth < 750 && window.innerWidth > 300)
+    setRootFontSize()
+  }
+  function setRootFontSize(){
     let rootEle = document.getElementsByTagName('html')[0];
-    let deviceWidth = window.screen.width;
+    let deviceWidth = window.innerWidth;
     rootEle.style.fontSize = (deviceWidth / 7.5)+'px';
-  })();
+  }
 </script>
