--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,25 @@
 </body>
 </html>
 <script>
-    setRootFontSize();
-  window.onresize = ()=>{
-    if(window.innerWidth < 750 && window.innerWidth > 300)
-    setRootFontSize()
-  }
-  function setRootFontSize(){
+  setRootFontSize();
+  window.addEventListener('resize',debounce(setRootFontSize))
+  function setRootFontSize() {
     let rootEle = document.getElementsByTagName('html')[0];
     let deviceWidth = window.innerWidth;
-    rootEle.style.fontSize = (deviceWidth / 7.5)+'px';
+    rootEle.style.fontSize = (deviceWidth / 7.5) + 'px';
+  }
+
+
+  function debounce(fn) {
+    let timer = null;
+    return function () {
+      if (timer) {
+        clearTimeout(timer);
+        timer = null;
+      }
+      timer = setTimeout(function(){
+        fn();
+      }, 16)
+    }
   }
 </script>
